[package]
edition = "2021"
name = "utils"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.33"
scylla = { path = "../scylla", features = [
    "openssl-010",
    "rustls-023",
    "unstable-cloud",
    "chrono-04",
    "time-03",
    "num-bigint-03",
    "num-bigint-04",
    "bigdecimal-04",
    "metrics",
] }
tokio = { version = "1.34", features = ["full"] }
futures = "0.3.6"

[[bin]]
name = "find_stale_keyspaces"
