[package]
edition = "2024"
name = "find_stale_test_keyspaces"
publish = false
version = "0.0.0"

[dependencies]
scylla = { path = "../../scylla" }
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.6"

[package.metadata.cargo-semver-checks.lints]
workspace = true
